--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
   <h style="font-size: 64px;text-align: center;width: 100%;display: inline-block;background-color: black;color: white;">Tossed Salad and Scrambled Eggs</h>
   <div class="selection">
     <button onclick="redirect('./langle/Langle.html');">LANGLE</button>
-    <button onclick="redirect('./tetris/Tetris.html');">TETRIS</button>
+    <button onclick="redirect('./');">to be added</button>
   </div>
 </body>
